Lots of Changes- Index and Parks page complete

--- a/downtown.html
+++ b/downtown.html
@@ -5,16 +5,17 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+	<link rel="icon" type="image/png" href="images/favicon.png"/>
 </head>
 
 <body>
 	<div id="container">
 		<div id="header">
 			<h1>Explore Eau-Claire</h1>
-			<h3 id="homelink"><a href="index.html">Home</a></h3>
 		</div>
-		<h1>This page will discuss the various businesses located in downtown Eau-Claire as well as vaious events and 
-		things to do in downtown Eau-Claire</h1>
+		<div id="homelinkcontainer">
+		<a href="index.html" id="homelink">Home</a>
+		</div>
 	</div>
 </body>
 </html>
