--- a/index.html
+++ b/index.html
@@ -6,46 +6,52 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<link rel="stylesheet" type="text/css" href="css/indexstyles.css" />
+	<link rel="icon" type="image/png" href="images/favicon.png"/>
 </head>
 
 <body>
 	<div id="container">
 		<div id="header">
 			<h1>Explore Eau-Claire</h1>
-			<h3 id="homelink"><a href="index.html">Home</a></h3>
 		</div>
 		<div id="linkcontainer">
 			<div id="link1" class="links">
-				<h3>Places to Eat & Drink</h3>
+				<h3>Things To Do</h3>
 				<div class="dropdowncontent">
+					<p><a href="parks.html">Parks</a></p>
+					<p><a href="museum.html">Museums</a></p>
+					<p><a href="downtown.html">Downtown</a></p>
 					<p><a href="resturants.html">Resturants</a></p>
-					<p><a href="coffeeshops.html">Coffee Shops</a></p>
-					<p><a href="bars.html">Bars</a></p>
-					<p><a href="wine.html">Wineries & Distilleries</a></p>
 				</div>
 			</div>
 			<div id="link2" class="links">
-				<h3>Places to Stay</h3>
+				<h3>Places to See</h3>
 				<div class="dropdowncontent">
-					<p><a href="hotel.html">Hotels & Motels</a></p>
-					<p><a href="wine.html">Campgrounds</a></p>
+					<p><a href="uwec.html">UWEC</a></p>
+					<p><a href="river.html">Chippewa River</a></p>
+					<p><a href="murals.html">Murals</a></p>
 				</div>
 			</div>
 			<div id="link3" class="links">
-				<h3>Things to Do</h3>
+				<h3>Resources</h3>
 				<div class="dropdowncontent">
-					<p><a href="attractions.html">Attractions</a></p>
-					<p><a href="parks.html">Parks</a></p>
-					<p><a href="downtown.html">Downtown</a></p>
-					<p><a href="music.html">Music Events & Festivals</a></p>
-					<p><a href="recreation.html">Recreation and Sports</a></p>
+					<p><a href="#">City of Eau-Claire</a></p>
+					<p><a href="#">UW Eau-Claire</a></p>
+					<p><a href="#">Local business Directory</a></p>
 				</div>
 			</div>
 		</div>
 		<div id="homeimage">
 			<img src="images/homeimage.jpg" alt="Arial View of The City of Eau-Claire">
 		</div>
-		
+		<div id="bottomcontainer">
+			<a href="quiz.html" id="bottom1" class="botcontainers">
+					<p>Think You Know Eau-Claire? Click Here to Take a Quiz!</p>
+			</a>
+			<a href="#" id="bottom2" class="botcontainers">
+				<p>Filler Text Click Me </p>
+			</a>
+		</div>
 	</div>
 </body>
 </html>
