--- a/parks.html
+++ b/parks.html
@@ -5,15 +5,69 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+	<link rel="icon" type="image/png" href="images/favicon.png"/>
+	<link rel="stylesheet" type="text/css" href="css/parkstyles.css" />
 </head>
 
 <body>
 	<div id="container">
 		<div id="header">
-			<h1>Explore Eau-Claire</h1>
-			<h3 id="homelink"><a href="index.html">Home</a></h3>
+			<h1>Explore Eau-Claire: Parks</h1>
 		</div>
-		<h1>This page will discuss the parks in Eau-Claire</h1>
+		<div id="homelinkcontainer">
+		<a href="index.html" id="homelink">Home</a>
+		</div>
+		<div id="photos">
+			<div id="row1">
+				<img src="images/phoenixpark.jpg" alt="Photo of Phoenix Park">
+				<img src="images/carsonpark.png" alt="Photo of Carson Park">
+			</div>
+			<div id="row2">
+				<img src="images/boydpark.jpg" alt="Photo of Boyd Park">
+				<img src="images/cameronpark.jpg" alt="Photo of Cameron Park">
+			</div>
+		</div>
+		<div id="content">
+			<div id="box1">
+				<h2>Community Parks in Eau-Claire</h2>
+				<ul>
+					<li>Carson</li>
+					<li>Jeffers</li>
+					<li>Mt Simon</li>
+					<li>Owen Bandshell</li>
+					<li>Phoenix</li>
+					<li>Riverview</li>
+					<li>Rod and Gun</li>					
+				</ul>
+			</div>
+			<div id="box2">
+				<h2>Neighborhood Parks in Eau-Claire</h2>
+				<ul>
+					<li>Boyd</li>
+					<li>Cameron</li>
+					<li>County Farm</li>
+					<li>Demmler</li>
+					<li>Forest Streen Garden</li>
+					<li>Grover Heights</li>
+					<li>Kessler</li>
+					<li>Lakeshore</li>
+					<li>Manz</li>
+					<li>McDonough</li>
+					<li>Mitscher</li>
+					<li>Newell</li>
+					<li>North River Fronts</li>
+					<li>Oakwood Hills</li>
+					<li>Pinehurst</li>
+					<li>Sam Davey</li>
+					<li>Putnam Heights</li>
+					<li>Roosevelt</li>
+					<li>Sundet</li>					
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div>
+	<p>For more information visit the <a href="https://eauclairewi.gov/recreation/parks-pavilions-shelters" target="_blank"> official Eau-Claire Parks Website</a></p>
 	</div>
 </body>
 </html>
