Museums Page Complete
+ other minor changes

--- a/museum.html
+++ b/museum.html
@@ -17,6 +17,40 @@
 		<div id="homelinkcontainer">
 		<a href="index.html" id="homelink">Home</a>
 		</div>
+		<div id="content">
+			<div id="box1" class="containers">
+				<img src="images/loggingmuseum.jpg" alt="Photo of Paul Bunyan outside the Eau-Claire logging museum">
+				<div class="innercontent">
+					<h3>Wisconsin Logging Museum</h3>
+					<p>Local logging history information and exhibits with a paul bunyan theme and a gift shop</p>
+					<p>1110 E Half Moon Dr, Eau-Claire, WI 54703</p>
+				</div>
+			</div>
+			<div id="box3" class="containers">
+				<img src="images/chippewamuseum.jpg" alt="Photo inside the Chippewa Valley Museum">
+				<div class="innercontent">
+					<h3>Chippewa Valley Museum</h3>
+					<p>Museum showcasing the history of the Chippewa Valley people and culture</p>
+					<p>1204 E Half Moon Dr, Eau-Claire, WI 54703</p>
+				</div>
+			</div>
+			<div id="box4" class="containers">
+				<img src="images/childrenmuseum.jpg" alt="Photo inside the Childrens Museum">
+				<div class="innercontent">
+					<h3>Children's Museum</h3>
+					<p>A Museum of Educational interactive exhibits for Children</p>
+					<p>220 S Barstow St, Eau Claire, WI 54701</p>
+				</div>
+			</div>
+			<div id="box5" class="containers">
+				<img src="images/birdmuseum.jpg" alt="James Newman Clark Bird Museum">
+				<div class="innercontent">
+					<h3>James Newman Clark Bird Museum</h3>
+					<p>Featuring over 500 species collected by James Clark from the 1870's to the 1920's</p>
+					<p>101 Roosevelt Ave, Eau Claire, WI 54703</p>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
