Work on Downtown page + other minor changes

--- a/downtown.html
+++ b/downtown.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<link rel="icon" type="image/png" href="images/favicon.png"/>
+	<link rel="stylesheet" type="text/css" href="css/downtown.css" />
+	<link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;1,400&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -15,6 +17,20 @@
 		</div>
 		<div id="homelinkcontainer">
 		<a href="index.html" id="homelink">Home</a>
+		</div>
+		<div id="content">
+			<h1>Downtown</h1>
+			<p id="headingquote">Downtown Eau Claire is located right along the confluence of the Chippewa and Eau Claire 
+					Rivers. This area is full of art, hip bars and restaurants, and live music.</p>
+			<div id="infobox1">
+				<div id="text1">
+					
+				</div>
+				<div id="photo1">
+					<img src="images/pablocenter.jpg" alt="Photo of the Pablo Center"/>
+					<p>Pablo Center at the Confluence</p>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
