--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<link rel="stylesheet" type="text/css" href="css/indexstyles.css" />
 	<link rel="icon" type="image/png" href="images/favicon.png"/>
+	<link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;1,400&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -35,9 +36,9 @@
 			<div id="link3" class="links">
 				<h3>Resources</h3>
 				<div class="dropdowncontent">
-					<p><a href="#">City of Eau-Claire</a></p>
-					<p><a href="#">UW Eau-Claire</a></p>
-					<p><a href="#">Local business Directory</a></p>
+					<p><a href="https://www.eauclairewi.gov/" target="_blank">City of Eau-Claire</a></p>
+					<p><a href="https://www.uwec.edu/" target="_blank">UW Eau-Claire</a></p>
+					<p><a href="https://www.downtowneauclaire.org/business-directory/" target="_blank">Local business Directory</a></p>
 				</div>
 			</div>
 		</div>
