--- a/parks.html
+++ b/parks.html
@@ -7,12 +7,13 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<link rel="icon" type="image/png" href="images/favicon.png"/>
 	<link rel="stylesheet" type="text/css" href="css/parkstyles.css" />
+	<link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;1,400&display=swap" rel="stylesheet">
 </head>
 
 <body>
 	<div id="container">
 		<div id="header">
-			<h1>Explore Eau-Claire: Parks</h1>
+			<h1>Explore Eau-Claire</h1>
 		</div>
 		<div id="homelinkcontainer">
 		<a href="index.html" id="homelink">Home</a>
@@ -20,11 +21,11 @@
 		<div id="photos">
 			<div id="row1">
 				<img src="images/phoenixpark.jpg" alt="Photo of Phoenix Park">
-				<img src="images/carsonpark.png" alt="Photo of Carson Park">
+				<img src="images/carsonpark.jpg" alt="Photo of Carson Park">
 			</div>
 			<div id="row2">
 				<img src="images/boydpark.jpg" alt="Photo of Boyd Park">
-				<img src="images/cameronpark.jpg" alt="Photo of Cameron Park">
+				<img src="images/park4.jpg" alt="Photo of Cameron Park">
 			</div>
 		</div>
 		<div id="content">
@@ -67,7 +68,7 @@
 		</div>
 	</div>
 	<div>
-	<p>For more information visit the <a href="https://eauclairewi.gov/recreation/parks-pavilions-shelters" target="_blank"> official Eau-Claire Parks Website</a></p>
+		<p>For more information visit the <a href="https://www.eauclairewi.gov/recreation/parks-pavilions-shelters" target="_blank"> official Eau-Claire Parks Website</a></p>
 	</div>
 </body>
 </html>
