--- a/museum.html
+++ b/museum.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<link rel="icon" type="image/png" href="images/favicon.png"/>
 	<link rel="stylesheet" type="text/css" href="css/museumstyles.css" />
+	<link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;1,400&display=swap" rel="stylesheet">
 </head>
 
 <body>
