Work on downtown page + other CSS changes

--- a/downtown.html
+++ b/downtown.html
@@ -21,14 +21,82 @@
 		<div id="content">
 			<h1>Downtown</h1>
 			<p id="headingquote">Downtown Eau Claire is located right along the confluence of the Chippewa and Eau Claire 
-					Rivers. This area is full of art, hip bars and restaurants, and live music.</p>
-			<div id="infobox1">
-				<div id="text1">
-					
+					Rivers. This area is full of art, hip bars and restaurants, and live music. Home to over 400
+					business downtown Eau Claire has alot to offer. Here we highlight a few of our favorite attractions.</p>
+			<div class="infobox">
+				<div class="text">
+					<h2>The Pablo Center at the Confluence</h2>
+					<p>The center offers the region a facility capable of providing transformative training, 
+					learning and creative opportunities. Inside, guests, local partners, and artists experience 
+					a 1,200+ seat theatre and an approximately 400-seat flexible theatre; three rehearsal, dance 
+					and community rooms; visual arts galleries; labs for sound and lighting, set and exhibit 
+					design, recording arts, multimedia production and costume design; and spaces equipped to 
+					support vocational training initiatives.</p>
+					<h3><a href="https://www.pablocenter.org/" target="_blank">Website</a></h3>
 				</div>
-				<div id="photo1">
+				<div class="photo">
 					<img src="images/pablocenter.jpg" alt="Photo of the Pablo Center"/>
 					<p>Pablo Center at the Confluence</p>
+				</div>
+			</div>
+			<div class="infobox">
+				<div class="text">
+					<h2>Business 2</h2>
+					<p>orem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacinia risus sit 
+					amet rutrum venenatis. Proin orci justo, feugiat ac rutrum a, commodo quis odio. Mauris 
+					sed dignissim mi. Donec auctor ipsum vel ullamcorper eleifend. Etiam scelerisque lectus 
+					turpis, aliquam finibus eros feugiat eu. Fusce tortor erat, posuere vel massa non</p>
+					<h3><a href="#" target="_blank">Website</a></h3>
+				</div>
+				<div class="photo">
+				</div>
+			</div>
+			<div class="infobox">
+				<div class="text">
+					<h2>Business 2</h2>
+					<p>orem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacinia risus sit 
+					amet rutrum venenatis. Proin orci justo, feugiat ac rutrum a, commodo quis odio. Mauris 
+					sed dignissim mi. Donec auctor ipsum vel ullamcorper eleifend. Etiam scelerisque lectus 
+					turpis, aliquam finibus eros feugiat eu. Fusce tortor erat, posuere vel massa non</p>
+					<h3><a href="#" target="_blank">Website</a></h3>
+				</div>
+				<div class="photo">
+				</div>
+			</div>
+			<div class="infobox">
+				<div class="text">
+					<h2>Business 2</h2>
+					<p>orem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacinia risus sit 
+					amet rutrum venenatis. Proin orci justo, feugiat ac rutrum a, commodo quis odio. Mauris 
+					sed dignissim mi. Donec auctor ipsum vel ullamcorper eleifend. Etiam scelerisque lectus 
+					turpis, aliquam finibus eros feugiat eu. Fusce tortor erat, posuere vel massa non</p>
+					<h3><a href="#" target="_blank">Website</a></h3>
+				</div>
+				<div class="photo">
+				</div>
+			</div>
+			<div class="infobox">
+				<div class="text">
+					<h2>Business 2</h2>
+					<p>orem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacinia risus sit 
+					amet rutrum venenatis. Proin orci justo, feugiat ac rutrum a, commodo quis odio. Mauris 
+					sed dignissim mi. Donec auctor ipsum vel ullamcorper eleifend. Etiam scelerisque lectus 
+					turpis, aliquam finibus eros feugiat eu. Fusce tortor erat, posuere vel massa non</p>
+					<h3><a href="#" target="_blank">Website</a></h3>
+				</div>
+				<div class="photo">
+				</div>
+			</div>
+			<div class="infobox">
+				<div class="text">
+					<h2>Business 2</h2>
+					<p>orem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacinia risus sit 
+					amet rutrum venenatis. Proin orci justo, feugiat ac rutrum a, commodo quis odio. Mauris 
+					sed dignissim mi. Donec auctor ipsum vel ullamcorper eleifend. Etiam scelerisque lectus 
+					turpis, aliquam finibus eros feugiat eu. Fusce tortor erat, posuere vel massa non</p>
+					<h3><a href="#" target="_blank">Website</a></h3>
+				</div>
+				<div class="photo">
 				</div>
 			</div>
 		</div>
