Downtown & Sculpture Page Complete

--- a/downtown.html
+++ b/downtown.html
@@ -39,64 +39,96 @@
 					<p>Pablo Center at the Confluence</p>
 				</div>
 			</div>
-			<div class="infobox">
+			<div class="infobox" id="storebox">
 				<div class="text">
-					<h2>Business 2</h2>
-					<p>orem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacinia risus sit 
-					amet rutrum venenatis. Proin orci justo, feugiat ac rutrum a, commodo quis odio. Mauris 
-					sed dignissim mi. Donec auctor ipsum vel ullamcorper eleifend. Etiam scelerisque lectus 
-					turpis, aliquam finibus eros feugiat eu. Fusce tortor erat, posuere vel massa non</p>
-					<h3><a href="#" target="_blank">Website</a></h3>
+					<h2>The Local Store</h2>
+					<p>The Local Store is chocked full of gift-worthy goods. Whether your seeking an offering of 
+					art, apparel, books, music, kids gear, glassware, decor, games, or foodstuffs for friends, 
+					family, or yourself, you'll surely find something deserving of your gift-giving generosity. 
+					Since many of their 1,000 items - products either created by local craftspeople or products 
+					simply evoking a Wisconsin way of life - are homemade designs and we offer exclusive in-house
+					brands, the goodies provided by The Local Store are both distinctive and memorable - two ideal
+					qualities of a great gift!</a></p>
+					<h3><a href="https://www.thelocalstore.org/" target="_blank">Website</a></h3>
+					<h2>Volume One Gallery</h2>
+					<p>The Volume One Gallery is a part of The Local Store, The vintage space features high ceilings, 
+					old wood floors, exposed brick walls and full A/V capability including an in-house sound system,
+					adjustable room and stage lighting, and a projector/screen combo. Between the Gallery and 
+					lobby seating area, more than 1,000 square feet are available for both public and private 
+					events. The Gallery is open with The Local Store every day, and features a rotating art 
+					exhibit from local and regional artists.</p>
+					<h3><a href="https://volumeone.org/sites/storegallery/pages/gallery_info" target="_blank">Website</a></h3>
 				</div>
 				<div class="photo">
+					<img src="images/localstore.jpg" alt="The Local Store"/>
+					<p>The Local Store/Volume One Gallery</p>
 				</div>
 			</div>
 			<div class="infobox">
 				<div class="text">
-					<h2>Business 2</h2>
-					<p>orem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacinia risus sit 
-					amet rutrum venenatis. Proin orci justo, feugiat ac rutrum a, commodo quis odio. Mauris 
-					sed dignissim mi. Donec auctor ipsum vel ullamcorper eleifend. Etiam scelerisque lectus 
-					turpis, aliquam finibus eros feugiat eu. Fusce tortor erat, posuere vel massa non</p>
-					<h3><a href="#" target="_blank">Website</a></h3>
+					<h2>L.E. Phillips Memorial Public Library</h2>
+					<p> L.E. Phillips Memorial Public Library is the largest library in west central Wisconsin 
+					and provides its customers with fiction and non-fiction books; magazines and newspapers; 
+					music CDs; DVDs; books-on-CD; downloadable e-books, audiobooks and music; educational computer 
+					software; programming for kids, teens and adults; Internet access and free Wi-Fi; 
+					word-processing computers and online information databases and resources; meeting rooms; 
+					art exhibits and displays; answers in person, by phone or e-mail; information about community 
+					agencies & services; local history and genealogy resources; delivery of materials to the 
+					homebound; iPads for checkout; volunteer opportunities; and more.</p>
+					<h3><a href="https://www.ecpubliclibrary.info/" target="_blank">Website</a></h3>
 				</div>
 				<div class="photo">
+					<img src="images/library.png" alt="L.E. Phillips Memorial Public Library"/>
+					<p>L.E. Phillips Memorial Library</p>
 				</div>
 			</div>
 			<div class="infobox">
 				<div class="text">
-					<h2>Business 2</h2>
-					<p>orem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacinia risus sit 
-					amet rutrum venenatis. Proin orci justo, feugiat ac rutrum a, commodo quis odio. Mauris 
-					sed dignissim mi. Donec auctor ipsum vel ullamcorper eleifend. Etiam scelerisque lectus 
-					turpis, aliquam finibus eros feugiat eu. Fusce tortor erat, posuere vel massa non</p>
-					<h3><a href="#" target="_blank">Website</a></h3>
+					<h2>Downtown Cinema</h2>
+					<p>Experience the charm of Micon Cinemas Downtown Budget Theater’s classic movie theater vibe 
+					with modern amenities. From reserved seating, to a full-scale food and beverage menu, enjoy 
+					new movie releases on a dime (Adult $5, Youth $4) with the luxury of contemporary movie 
+					theaters. From specialty pizzas, appetizers, desserts, alcoholic and non-alcoholic beverages, 
+					classic movie theater concessions, as well as vegan options, there’s something for every 
+					palate!</p>
+					<h3><a href="https://www.miconcinemas.com/" target="_blank">Website</a></h3>
 				</div>
 				<div class="photo">
+					<img src="images/cinema.jpg" alt="Micon Cinema in Downtown EauClaire"/>
+					<p>Micon Cinema in Downtown Eau Claire</p>
 				</div>
 			</div>
 			<div class="infobox">
 				<div class="text">
-					<h2>Business 2</h2>
-					<p>orem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacinia risus sit 
-					amet rutrum venenatis. Proin orci justo, feugiat ac rutrum a, commodo quis odio. Mauris 
-					sed dignissim mi. Donec auctor ipsum vel ullamcorper eleifend. Etiam scelerisque lectus 
-					turpis, aliquam finibus eros feugiat eu. Fusce tortor erat, posuere vel massa non</p>
-					<h3><a href="#" target="_blank">Website</a></h3>
+					<h2>200 Main Art and Wine</h2>
+					<p>200 MAIN ART & WINE is a vibrant, engaging, FUN fine art gallery located on the corner of 
+					Main and Graham Ave., in Downtown Eau Claire. Voted ‘BEST ART GALLERY’ for 2018, they have 
+					expanded and are now the first art gallery to host a wine dispenser, with options for 8 
+					different kinds of wonderful wines to enjoy as you view fine art and relax with friends 
+					(beer available as well). Over 30 local and regional artists are represented in this 
+					comfortable, creative environment! This vibrant gallery also sponsors creative events, 
+					such as author readings, live music, art demonstrations and group discussions.</p>
+					<h3><a href="https://www.200main.org/" target="_blank">Website</a></h3>
 				</div>
 				<div class="photo">
+					<img src="images/mainartgallery.jpg" alt="200 Main Art and Gallery Entrance">
+					<p>200 Main Art and Wine</p>
 				</div>
 			</div>
 			<div class="infobox">
 				<div class="text">
-					<h2>Business 2</h2>
-					<p>orem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacinia risus sit 
-					amet rutrum venenatis. Proin orci justo, feugiat ac rutrum a, commodo quis odio. Mauris 
-					sed dignissim mi. Donec auctor ipsum vel ullamcorper eleifend. Etiam scelerisque lectus 
-					turpis, aliquam finibus eros feugiat eu. Fusce tortor erat, posuere vel massa non</p>
-					<h3><a href="#" target="_blank">Website</a></h3>
+					<h2>B-Framed Galleries</h2>
+					<p>B~Framed Galleries two story art gallery has been located in historic Downtown Eau Claire 
+					since 1976. When you walk into the gallery you will be surrounded with incredible art that you 
+					will not see anywhere else. They feature International and nationally known artists as well as 
+					exclusive Wisconsin art and exclusive regional photography as well as three dimensional fine art 
+					glass, ceramics and wood. Their expansive two gallery inventory and exclusive resources assure that 
+					they can find the perfect piece of art for your home or office.</p>
+					<h3><a href="http://www.bframed.com/" target="_blank">Website</a></h3>
 				</div>
 				<div class="photo">
+					<img src="images/bframed.jpg" alt="B-Framed Galleries">
+					<p>B-Framed Galleries</p>
 				</div>
 			</div>
 		</div>
