--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 					<p><a href="uwec.html">UWEC</a></p>
 					<p><a href="river.html">Chippewa River</a></p>
 					<p><a href="murals.html">Murals</a></p>
+					<p><a href="sculpture.html">Sculpture Tour</a></p>
 				</div>
 			</div>
 			<div id="link3" class="links">
