Quiz and Resturant Pages Complete

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Explore Eau-Claire</title>
+	<title>Explore Eau Claire</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
@@ -13,7 +13,7 @@
 <body>
 	<div id="container">
 		<div id="header">
-			<h1>Explore Eau-Claire</h1>
+			<h1>Explore Eau Claire</h1>
 		</div>
 		<div id="linkcontainer">
 			<div id="link1" class="links">
@@ -37,9 +37,10 @@
 			<div id="link3" class="links">
 				<h3>Resources</h3>
 				<div class="dropdowncontent">
-					<p><a href="https://www.eauclairewi.gov/" target="_blank">City of Eau-Claire</a></p>
-					<p><a href="https://www.uwec.edu/" target="_blank">UW Eau-Claire</a></p>
+					<p><a href="https://www.eauclairewi.gov/" target="_blank">City of Eau Claire Website</a></p>
+					<p><a href="https://www.uwec.edu/" target="_blank">UW Eau Claire Website</a></p>
 					<p><a href="https://www.downtowneauclaire.org/business-directory/" target="_blank">Local business Directory</a></p>
+					<p><a href="https://www.co.eau-claire.wi.us/" target="_blank">Eau Claire County Website</a></p>
 				</div>
 			</div>
 		</div>
@@ -48,10 +49,10 @@
 		</div>
 		<div id="bottomcontainer">
 			<a href="quiz.html" id="bottom1" class="botcontainers">
-					<p>Think You Know Eau-Claire? Click Here to Take a Quiz!</p>
+					<p>Think You Know Eau Claire? Click Here to Take a Quiz!</p>
 			</a>
-			<a href="#" id="bottom2" class="botcontainers">
-				<p>Filler Text Click Me </p>
+			<a href="https://www.google.com/search?q=eau+claire+wi&rlz=1C1CHBF_enUS793US793&sxsrf=ALeKk00Z4upDnw97rGjElpPTo29btICyrg:1603584983295&source=lnms&tbm=nws&sa=X&ved=2ahUKEwjRi6_Ku87sAhUSK80KHbvjCLUQ_AUoAnoECDoQBA&biw=1366&bih=625" target="_blank" id="bottom2" class="botcontainers">
+				<p>Current Eau Claire News!</p>
 			</a>
 		</div>
 	</div>
