--- a/resturants.html
+++ b/resturants.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Explore Eau-Claire:Resturants</title>
+	<title>Explore Eau Claire: Resturants</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="css/resturant.css" />	
 	<link rel="icon" type="image/png" href="images/favicon.png"/>
 	<link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;1,400&display=swap" rel="stylesheet">
 </head>
@@ -12,10 +13,86 @@
 <body>
 	<div id="container">
 		<div id="header">
-			<h1>Explore Eau-Claire</h1>
+			<h1>Explore Eau Claire</h1>
 		</div>
 		<div id="homelinkcontainer">
 		<a href="index.html" id="homelink">Home</a>
+		</div>
+		<div id="content">
+			<div id="box1" class="containers">
+					<img src="images/monalisas.jpg" alt="Photo Of Mona Lisa's">
+					<div class="innercontent">
+						<h3>Mona Lisa's</h3>
+						<p>Mona Lisa's is a contemporary Italian and Mediterranean restaurant 
+						serving eats such as pasta, seafood, steak, salad, pizza and more, as 
+						well as a large selection of wines, 13 tap beers, and a full service bar.</p>
+						<p><a href="https://www.monalisas.biz/" target="_blank">Website</a></p>
+					</div>
+			</div>
+			<div id="box2" class="containers">
+					<div class="innercontent">
+						<h3>Dooley's Pub</h3>
+						<p>Dooley's Pub has been the place to go for a traditional Irish pub 
+						experience since doors opened in 2005. Whether you're looking for a
+						hearty Irish stew made with Guinness gravy, or cold glass of Finnegan's
+						Irish Amber, you're sure to find what you're looking for here.</p>
+						<p><a href="http://dooleyspub.com/" target="_blank">Website</a></p>
+					</div>
+					<img src="images/duleys.jpg" alt="Photo Of Duleys Pub">
+			</div>
+			<div id="box3" class="containers">
+					<img src="images/mogies.jpg" alt="Photo Of Mogies Pub and Resturant">
+					<div class="innercontent">
+						<h3>Mogie's Pub</h3>
+						<p>Mogie's Pub is Home of Eau Claire's greatest burgers. They offer fun, 
+						casual atmosphere, 17 tap beers, full bar, and televised sporting events. 
+						Located on historic Water Street. Dine-in or carry out.</p>
+						<p><a href="https://www.mogiespub.com/" target="_blank">Website</a></p>
+					</div>
+			</div>
+			<div id="box4" class="containers">
+					<div class="innercontent">
+						<h3>District Pub and Grill</h3>
+						<p>Locally owned, Over 30 Tap beers and a custom crafted cocktail menu. 
+						Amazing food at a fair price. Known for our burgers, fish fry and selection!</p>
+						<p><a href="https://www.thedistrictpubandgrill.com/" target="_blank">Website</a></p>
+					</div>
+					<img src="images/districtpub.jpg" alt="The District Pub and Grill">
+			</div>
+			<div id="box5" class="containers">
+					<div class="innercontent">
+						<h3>Milwaukee Burger</h3>
+						<p>Beer and burgers -what more could you ask for? Milwaukee Burger has 32 
+						choices of tap beers to choose from. Go and enjoy an order of their own cut 
+						fries from the best Idaho potatoes. Don’t forget about their fresh angus 
+						beef burgers hand patted everyday with their freshly made buns. “It’s the 
+						way it should be…and at Milwaukee Burger Co. it’s the way it is!”</p>
+						<p><a href="https://milwaukeeburgercompany.com/" target="_blank">Website</a></p>
+					</div>
+					<img src="images/milwaukeeburger.jpg" alt="The Milwaukee Burger">
+			</div>
+			<div id="box6" class="containers">
+					<div class="innercontent">
+						<h3>ClaireWaters</h3>
+						<p>ClaireWaters is bringing back the supper club with a twist and a high 
+						level of excellence to the westside of Eau Claire. You'll find a wide array 
+						of food from cheese curds to ahi tuna wontons, chicken satay and sliders to 
+						Norwegian smoked salmon sandwiches. Also a great place to watch the game.</p>
+						<p><a href="http://clairewatersec.com/" target="_blank">Website</a></p>
+					</div>
+					<img src="images/clairewaters.png" alt="Image of Food at the ClaireWaters Resturant">
+			</div>
+			<div id="box7" class="containers">
+					<div class="innercontent">
+						<h3>Fuji Sushi and Steak House</h3>
+						<p>Fuji Sushi & Steakhouse is a wonderful full service steakhouse and 
+						sushi bar that combines fresh sushi with authentic Japanese hibachi 
+						entrees. All prepared in front of you as you sit at the grill and watch 
+						your dish being made from start to finish.</p>
+						<p><a href="http://fujisushiandsteakhouse.co/" target="_blank">Website</a></p>
+					</div>
+					<img src="images/fuji.jpg" alt="A man cooking food at Fuji">
+			</div>
 		</div>
 	</div>
 </body>
