Mural Page Done

--- a/sculpture.html
+++ b/sculpture.html
@@ -34,16 +34,16 @@
 			</div>
 			<div id="slides">
 				<button onclick="prev()">Prev</button>
-				<img class="mySlides" src="images/statue1.jpg">
-				<img class="mySlides" src="images/statue2.jpg">
-				<img class="mySlides" src="images/statue3.jpg">
-				<img class="mySlides" src="images/statue4.jpg">
-				<img class="mySlides" src="images/statue5.jpg">
-				<img class="mySlides" src="images/statue6.jpg">
-				<img class="mySlides" src="images/statue7.jpg">
-				<img class="mySlides" src="images/statue8.jpg">
-				<img class="mySlides" src="images/statue9.jpg">
-				<img class="mySlides" src="images/statue10.jpg">
+				<img class="mySlides" src="images/statue1.jpg" alt="Image of a sculpture on the Sculpture Walk">
+				<img class="mySlides" src="images/statue2.jpg" alt="Image of a sculpture on the Sculpture Walk">
+				<img class="mySlides" src="images/statue3.jpg" alt="Image of a sculpture on the Sculpture Walk">
+				<img class="mySlides" src="images/statue4.jpg" alt="Image of a sculpture on the Sculpture Walk">
+				<img class="mySlides" src="images/statue5.jpg" alt="Image of a sculpture on the Sculpture Walk">
+				<img class="mySlides" src="images/statue6.jpg" alt="Image of a sculpture on the Sculpture Walk">
+				<img class="mySlides" src="images/statue7.jpg" alt="Image of a sculpture on the Sculpture Walk">
+				<img class="mySlides" src="images/statue8.jpg" alt="Image of a sculpture on the Sculpture Walk">
+				<img class="mySlides" src="images/statue9.jpg" alt="Image of a sculpture on the Sculpture Walk">
+				<img class="mySlides" src="images/statue10.jpg" alt="Image of a sculpture on the Sculpture Walk">
 				<button onclick="next()">Next</button>
 			</div>
 		</div>
