--- a/murals.html
+++ b/murals.html
@@ -5,7 +5,9 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="css/murals.css" />
 	<link rel="icon" type="image/png" href="images/favicon.png"/>
+	<script src="js/sculpture.js"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;1,400&display=swap" rel="stylesheet">
 </head>
 
@@ -16,6 +18,28 @@
 		</div>
 		<div id="homelinkcontainer">
 		<a href="index.html" id="homelink">Home</a>
+		</div>
+		<div id="content">
+		<h3 id="text">Eau Claire has a thriving creative and arts community, thoughout Eau Claire you can find many amazing murals 
+			created by various talented artists. In recent years murals have been popping up everywhere, here are a few of my
+			favorites!<h3>
+		<div id="slides">
+				<button onclick="prev()" id="prev">Prev</button>
+				<img class="mySlides" src="images/murals/colorblock1.jpg" alt="Photo of a mural on Colorblock">
+				<img class="mySlides" src="images/murals/colorblock2.jpg" alt="Photo of a mural on Colorblock">
+				<img class="mySlides" src="images/murals/colorblock3.jpg" alt="Photo of a mural on Colorblock">
+				<img class="mySlides" src="images/murals/colorblock4.jpg" alt="Photo of a mural on Colorblock">
+				<img class="mySlides" src="images/murals/colorblock5.jpg" alt="Photo of a mural on Colorblock">
+				<img class="mySlides" src="images/murals/jus.jpg" alt="Mural on JU's">
+				<img class="mySlides" src="images/murals/loveiskey.jpg" alt="Mural that says Love is Key">
+				<img class="mySlides" src="images/murals/ramones.jpg" alt="Mural that says VOTE on the side of Ramones">
+				<img class="mySlides" src="images/murals/skinprints.jpg" alt="Mural on a tatooparlor">
+				<img class="mySlides" src="images/murals/tbp.jpg" alt="The TBP Mural in Eau Claire">
+				<img class="mySlides" src="images/murals/artisanforge.png" alt="Mural on a garage door at ArtisanForge">
+				<img class="mySlides" src="images/murals/artisanforge2.jpg" alt="Mural on a garage door at ArtisanForge">
+				<img class="mySlides" src="images/murals/boniver.jpg" alt="A mural for Bon Iver a musicain">
+				<img class="mySlides" src="images/murals/cascade.jpg" alt="The Cascade Mural in Eau Claire">				
+				<button onclick="next()" id="next">Next</button>
 		</div>
 	</div>
 </body>
